--- a/src/components/ugemr-metrics/ugandaemr-poc/UgandaemrPOC.css
+++ b/src/components/ugemr-metrics/ugandaemr-poc/UgandaemrPOC.css
@@ -1,14 +1,3 @@
-.metrics-header {
-  height: 3rem;
-  background-color: #009384;
-  color: white;
-}
-
-.header-label {
-  padding: 0.8rem;
-  font-weight: bold;
-}
-
 .tile-container {
   padding-top: 2rem;
   display: flex;
@@ -23,16 +12,16 @@
 }
 
 .tile-margin {
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 
 .item-chart-container {
-  padding-top: 2rem;
+  padding-top: 1rem;
   display: flex;
 }
 
 .item-chart {
-  width: 50%;
+  width: 100%;
   border: .0625rem solid #e0e0e0;
   min-height: 600px;
   border-radius: .5rem;
@@ -42,21 +31,6 @@
   .cds--cc--title p.title {
     padding-bottom: 1rem;
   }
-}
-
-.item-chart-left {
-  margin-right: 2rem;
-}
-
-.metrics-body {
-  background-color: #e0e0e08a;
-}
-
-.footer {
-  text-align: center;
-  font-family: serif;
-  border-top: solid 1px #009384;
-  padding: .5rem;
 }
 
 .rights-panel {
@@ -88,7 +62,7 @@
   font-size: 25px;
 }
 
-.emr-details-table td {
+.poc-details-table td {
   font-size: 15px;
   font-family: sans-serif;
   padding-bottom: 6px;
@@ -112,20 +86,9 @@
   }
 }
 
-.arrow-icon {
-  fill: #009d9a !important;
-  margin-left: .2rem;
-  margin-top: .1rem;
-}
-
 .tile-bottom-style {
   display: flex;
   justify-content: space-between;
-}
-
-.view-button {
-  margin-top: 1.8rem !important;
-  color: #009d9a !important;
 }
 
 .switcher-container-width {
@@ -143,10 +106,3 @@
   margin-top: 2.5rem
 }
 
-.item-chart-donut {
-  width: 48%;
-  min-height: 600px;
-  border-radius: .5rem;
-  background-color: #ffff;
-  padding: 1rem;
-}
